--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.5",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -16,7 +17,13 @@
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.1.0",
+    "slugify": "^1.6.5",
+    "swr": "^1.3.0",
+    "typescript": "4.9.3",
+    "usehooks-ts": "^2.9.1"
   }
 }
