--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@next/font": "^13.0.5",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "cypress": "^12.1.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "lodash.debounce": "^4.0.8",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
@@ -23,7 +27,9 @@
     "react-loading-skeleton": "^3.1.0",
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
-    "typescript": "4.9.3",
-    "usehooks-ts": "^2.9.1"
+    "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7"
   }
 }
