--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "@types/lodash.debounce": "^4.0.7"
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/lodash.debounce": "^4.0.7",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwindcss": "^3.2.4"
   }
 }
