--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "cities.json": "^1.1.15",
     "cypress": "^12.1.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "fuse.js": "^6.6.2",
     "lodash.debounce": "^4.0.8",
     "next": "13.0.5",
     "react": "18.2.0",
@@ -30,6 +32,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@tailwindcss/typography": "^0.5.8",
     "@types/lodash.debounce": "^4.0.7",
     "autoprefixer": "^10.4.13",
