--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@next/font": "^13.0.5",
+    "@reach/accordion": "^0.18.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "cities.json": "^1.1.15",
     "cypress": "^12.1.0",
+    "date-fns": "^2.29.3",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint-config-next": "^12.0.4",
     "fuse.js": "^6.6.2",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "next": "13.0.5",
     "react": "18.2.0",
@@ -29,6 +31,7 @@
     "react-loading-skeleton": "^3.1.0",
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
+    "tw-elements": "^1.0.0-alpha13",
     "typescript": "4.9.3"
   },
   "devDependencies": {
