--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.0",
+    "recharts": "^2.2.0",
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
     "typescript": "4.9.3"
