--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "^12.0.4",
+    "framer-motion": "^10.12.4",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "next": "13.1.1",
